= Changelog

== 1.7.1 (tbc)

* FIX: ZMQ::Message#pop did not relase ownership of frame.
* FIX: !Important! ZMQ::Message was not marking owned ZMQ::Frame objects, leading to potential GC crash in 1.7.0.

== 1.7.0 (July 21, 2013)

* ZMQ::Frame - Implemented an interal wrapper around the underlying czmq frame objects to better manage memory and object ownership. (Matt Connolly)
* ZMQ::Frame#gone? and ZMQ::Message#gone? - new methods, return true when the frame/message has been sent and is no longer available for accessing. Methods may return nil for read operations or raise ZMQ::Error if the frame/message would be changed by that method. (Matt Connolly)
* ZMQ::Message - iterators (#first, #next, #last and #to_a) return consistent frame objects (not duplicates as in previous versions) that can be used with #remove. (Matt Connolly)
* Sending a message or frame marks it as "gone". The underlying data objects will be released by ZeroMQ as the frames/messages are sent over the socket. (Matt Connolly)

== 1.6.4 (July 10, 2013)
* Depend on a checkout task for vendored submodule init (Matt Connolly)

== 1.6.3 (July 1, 2013)
* Mark socket wrapper is destroyed before calling destroy on the socket (Matt Connolly)
* Fix edge cases in socket monitor implementation (Matt Connolly)
* Setup up ZeroMQ and CZMQ as git submodules (Matt Connolly)
* SmartOS/Solaris: remove broken "add_define"s, not used in zmq or czmq; update czmq compile flags (Matt Connolly)
* Fix sockets sending strings in printf-style format directly (Matt Connolly)
* Fix ZMQ::Poller#poll fail in ZmqAssert incorrectly (Matt Connolly)
*  Fix socket#bind returning false incorrectly (Matt Connolly)

== 1.6.2 (May 29, 2013 )
* Fix compiler and Ruby warnings

== 1.6.1 (May 15, 2013 )
* Bump czmq to 1.4.1
* Introduce ZMQ::Beacon for service announcement and discovery
* Implement ZMQ::Socket#poll
* Implement ZMQ::Socket#disconnect
* Drop support for ZeroMQ 2.x

== 1.6 (May 2, 2013 )
* Bump czmq to 1.4.0